--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 node_modules
 /dist
 
+package-lock.json
+public/comics/*
+public/paid-images/*
 
 # local env files
 .env.local
@@ -11,7 +14,6 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -20,4 +22,4 @@ pnpm-debug.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+*.sw*
