--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --skip-plugins @vue/cli-plugin-eslint",
+    "build": "vue-cli-service build --skip-plugins @vue/cli-plugin-eslint",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "better-vue-breakpoints": "^0.1.4",
     "core-js": "^3.6.5",
+    "date-fns": "^2.21.1",
     "vue": "^2.6.11",
+    "vue-cookies": "^1.7.4",
+    "vue-loading-skeleton": "^1.1.9",
+    "vue-material-design-icons": "^4.11.0",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
