--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "better-vue-breakpoints": "^0.1.4",
     "core-js": "^3.6.5",
     "date-fns": "^2.21.1",
+    "scroll-into-view-if-needed": "^2.2.28",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.4",
     "vue-loading-skeleton": "^1.1.9",
     "vue-material-design-icons": "^4.11.0",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
+    "vue-simple-spinner": "^1.2.10",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "sass": "^1.32.11",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
@@ -46,6 +49,11 @@
       "parser": "babel-eslint"
     },
     "rules": {}
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   },
   "browserslist": [
     "> 1%",
