--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "axios": "^0.21.1",
     "better-vue-breakpoints": "^0.1.4",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "date-fns": "^2.21.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "scroll-into-view-if-needed": "^2.2.28",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-cookies": "^1.7.4",
     "vue-loading-skeleton": "^1.1.9",
     "vue-material-design-icons": "^4.11.0",
