--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "sass-loader": "^8.0.2",
     "scroll-into-view-if-needed": "^2.2.28",
     "vue": "^2.6.11",
-    "vue-chartjs": "^3.5.1",
     "vue-cookies": "^1.7.4",
     "vue-loading-skeleton": "^1.1.9",
     "vue-material-design-icons": "^4.11.0",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vue-simple-spinner": "^1.2.10",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -35,8 +35,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.32.11",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.32.11"
   },
   "eslintConfig": {
     "root": true,
