--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.32.11"
+    "sass": "^1.32.11",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
