Bucket name prod, remove console log

--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
   "apiBaseUrl": "/api",
-  "paidImagesBucketName": "https://storage.googleapis.com/yiffer-paid-images-beta"
+  "paidImagesBucketName": "https://storage.googleapis.com/yiffer-paid-images"
 }
