--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
   "apiBaseUrl": "/api",
-  "paidImagesBucketName": "https://storage.googleapis.com/yiffer-paid-images"
+  "paidImagesBaseUrl": "https://static.yiffer.xyz/pi"
 }
