--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,5 @@
 {
   "apiBaseUrl": "/api",
-  "paidImagesBaseUrl": "https://static.yiffer.xyz/pi"
+  "paidImagesBaseUrl": "https://static.yiffer.xyz/pi",
+  "cookieConfig": ["60d", "/", ".yiffer.xyz", true, "Strict"]
 }
