Reset, only 60d cookie

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
   "apiBaseUrl": "/api",
   "paidImagesBaseUrl": "https://static.yiffer.xyz/pi",
-  "cookieConfig": ["60d", "/", ".yiffer.xyz", true, "Strict"]
+  "cookieConfig": ["60d"]
 }
