--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ads-client",
-  "version": "0.1.0",
+  "version": "4.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --skip-plugins @vue/cli-plugin-eslint",
@@ -11,10 +11,8 @@
     "axios": "^0.21.1",
     "better-vue-breakpoints": "^0.1.4",
     "chart.js": "^2.9.4",
-    "core-js": "^3.6.5",
-    "date-fns": "^2.21.1",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
+    "core-js": "^3.19.3",
+    "date-fns": "^2.27.0",
     "scroll-into-view-if-needed": "^2.2.28",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.4",
@@ -34,9 +32,11 @@
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.11",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "eslint-plugin-vue": "^8.2.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10.2.0"
   },
   "eslintConfig": {
     "root": true,
